--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -6,9 +6,9 @@
     <title>Textual Elegance: HTML Formatting Mastery</title>
 </head>
 <body>
-    <pre><img src="logo.png" alt="HAL-img" height="90px" width="90px"><h1 style="color: rgb(36, 63, 150); text-align: center;">CLASS DETAIL</h1></pre>
+    <img src="logo.png" alt="HAL-img" height="90px" width="90px"> <h1 style="color: rgb(36, 63, 150); text-align: center; display: inline; position: relative; bottom: 30px; text-decoration: solid;" >CLASS DETAIL</h1>
     <div id="one">
-    <pre> 
+    
          <a href="#home">Home</a>            <a href="#know us">Know us</a>        <a href="#academics">Academics</a>       <a href="#about">About</a>          <a href="#result">Result</a>         <a href="#admission">Admission</a>      <a href="#per">Percentage</a>   </pre> 
     </div>
     <h2 style="color: rgb(19, 2, 2);">Introduction</h2>
